# LLM-Agentic-LlamaIndex

./: README.md  kvietimai.csv  pyproject.toml  test_agent.ipynb  test_agent.py  utils.py
