[tool.poetry]
name = "agenticllm"
version = "0.1.0"
description = ""
authors = ["MonikaVen <monika.venckauskaite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
nest-asyncio = "^1.6.0"
llama-index = "^0.10.45"
requests = "^2.32.3"
googletrans = "2.2.0"
py-trans = "^0.6.1"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
